src/mfpl/MFPLParser.java
package mfpl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MFPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__26=1, T__25=2, T__24=3, T__23=4, T__22=5, T__21=6, T__20=7, T__19=8, 
		T__18=9, T__17=10, T__16=11, T__15=12, T__14=13, T__13=14, T__12=15, T__11=16, 
		T__10=17, T__9=18, T__8=19, T__7=20, T__6=21, T__5=22, T__4=23, T__3=24, 
		T__2=25, T__1=26, T__0=27, TYPENAME=28, IDENTIFIER=29, NUMERICVALUE=30, 
		INTVALUE=31, FLOATVALUE=32, STRINGVALUE=33, WS=34;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'as'", "'incase'", "';'", "'doforever if'", "'print'", 
		"'('", "'noforever'", "'nocount'", "'othercase'", "'*'", "'declare'", 
		"'<-'", "'terminate'", "'to'", "'equals'", "'perform'", "'otherwise'", 
		"'or'", "'start'", "'nocase'", "'syscall'", "'count from'", "')'", "'and'", 
		"'+'", "'-'", "TYPENAME", "IDENTIFIER", "NUMERICVALUE", "INTVALUE", "FLOATVALUE", 
		"STRINGVALUE", "WS"
	};
	public static final int
		RULE_parse = 0, RULE_rootRule = 1, RULE_statementRule = 2, RULE_declarationRule = 3, 
		RULE_assignmentRule = 4, RULE_expressionRule = 5, RULE_expressionRule2 = 6, 
		RULE_expressionRule3 = 7, RULE_expressionRule4 = 8, RULE_expressionRule5 = 9, 
		RULE_expressionRule6 = 10, RULE_conditionalStructRule = 11, RULE_ifRule = 12, 
		RULE_elseIfRule = 13, RULE_elseRule = 14, RULE_routineRule = 15, RULE_loopRule = 16, 
		RULE_countRule = 17, RULE_doforeverifRule = 18, RULE_printRule = 19, RULE_printContentRule = 20, 
		RULE_systemcallRule = 21, RULE_systemcallcontentRule = 22;
	public static final String[] ruleNames = {
		"parse", "rootRule", "statementRule", "declarationRule", "assignmentRule", 
		"expressionRule", "expressionRule2", "expressionRule3", "expressionRule4", 
		"expressionRule5", "expressionRule6", "conditionalStructRule", "ifRule", 
		"elseIfRule", "elseRule", "routineRule", "loopRule", "countRule", "doforeverifRule", 
		"printRule", "printContentRule", "systemcallRule", "systemcallcontentRule"
	};

	@Override
	public String getGrammarFileName() { return "MFPL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MFPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public RootRuleContext rootRule() {
			return getRuleContext(RootRuleContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); rootRule();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootRuleContext extends ParserRuleContext {
		public List<StatementRuleContext> statementRule() {
			return getRuleContexts(StatementRuleContext.class);
		}
		public StatementRuleContext statementRule(int i) {
			return getRuleContext(StatementRuleContext.class,i);
		}
		public RootRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rootRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterRootRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitRootRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitRootRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootRuleContext rootRule() throws RecognitionException {
		RootRuleContext _localctx = new RootRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rootRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); match(T__7);
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49); statementRule();
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__24) | (1L << T__22) | (1L << T__21) | (1L << T__15) | (1L << T__5) | (1L << T__4) | (1L << IDENTIFIER))) != 0) );
			setState(54); match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementRuleContext extends ParserRuleContext {
		public DeclarationRuleContext declarationRule() {
			return getRuleContext(DeclarationRuleContext.class,0);
		}
		public ConditionalStructRuleContext conditionalStructRule() {
			return getRuleContext(ConditionalStructRuleContext.class,0);
		}
		public LoopRuleContext loopRule() {
			return getRuleContext(LoopRuleContext.class,0);
		}
		public RoutineRuleContext routineRule() {
			return getRuleContext(RoutineRuleContext.class,0);
		}
		public AssignmentRuleContext assignmentRule() {
			return getRuleContext(AssignmentRuleContext.class,0);
		}
		public StatementRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterStatementRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitStatementRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitStatementRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementRuleContext statementRule() throws RecognitionException {
		StatementRuleContext _localctx = new StatementRuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statementRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			switch (_input.LA(1)) {
			case T__15:
				{
				setState(56); declarationRule();
				}
				break;
			case IDENTIFIER:
				{
				setState(57); assignmentRule();
				}
				break;
			case T__24:
				{
				setState(58); conditionalStructRule();
				}
				break;
			case T__22:
			case T__4:
				{
				setState(59); loopRule();
				}
				break;
			case T__21:
			case T__5:
				{
				setState(60); routineRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(63); match(T__23);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationRuleContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER(int i) {
			return getToken(MFPLParser.IDENTIFIER, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(MFPLParser.IDENTIFIER); }
		public TerminalNode TYPENAME() { return getToken(MFPLParser.TYPENAME, 0); }
		public DeclarationRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterDeclarationRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitDeclarationRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitDeclarationRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationRuleContext declarationRule() throws RecognitionException {
		DeclarationRuleContext _localctx = new DeclarationRuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarationRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); match(T__15);
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66); match(IDENTIFIER);
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			setState(71); match(T__25);
			setState(72); match(TYPENAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentRuleContext extends ParserRuleContext {
		public TerminalNode STRINGVALUE() { return getToken(MFPLParser.STRINGVALUE, 0); }
		public ExpressionRuleContext expressionRule() {
			return getRuleContext(ExpressionRuleContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(MFPLParser.IDENTIFIER, 0); }
		public AssignmentRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterAssignmentRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitAssignmentRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitAssignmentRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentRuleContext assignmentRule() throws RecognitionException {
		AssignmentRuleContext _localctx = new AssignmentRuleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignmentRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(IDENTIFIER);
			setState(75); match(T__14);
			setState(78);
			switch (_input.LA(1)) {
			case T__20:
			case IDENTIFIER:
			case NUMERICVALUE:
				{
				setState(76); expressionRule(0);
				}
				break;
			case STRINGVALUE:
				{
				setState(77); match(STRINGVALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionRuleContext extends ParserRuleContext {
		public Token operator;
		public ExpressionRuleContext expressionRule() {
			return getRuleContext(ExpressionRuleContext.class,0);
		}
		public ExpressionRule2Context expressionRule2() {
			return getRuleContext(ExpressionRule2Context.class,0);
		}
		public ExpressionRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterExpressionRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitExpressionRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitExpressionRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionRuleContext expressionRule() throws RecognitionException {
		return expressionRule(0);
	}

	private ExpressionRuleContext expressionRule(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionRuleContext _localctx = new ExpressionRuleContext(_ctx, _parentState);
		ExpressionRuleContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expressionRule, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(81); expressionRule2(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionRuleContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expressionRule);
					setState(83);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(84); ((ExpressionRuleContext)_localctx).operator = match(T__8);
					setState(85); expressionRule2(0);
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionRule2Context extends ParserRuleContext {
		public Token operator;
		public ExpressionRule3Context expressionRule3() {
			return getRuleContext(ExpressionRule3Context.class,0);
		}
		public ExpressionRule2Context expressionRule2() {
			return getRuleContext(ExpressionRule2Context.class,0);
		}
		public ExpressionRule2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionRule2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterExpressionRule2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitExpressionRule2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitExpressionRule2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionRule2Context expressionRule2() throws RecognitionException {
		return expressionRule2(0);
	}

	private ExpressionRule2Context expressionRule2(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionRule2Context _localctx = new ExpressionRule2Context(_ctx, _parentState);
		ExpressionRule2Context _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expressionRule2, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(92); expressionRule3(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionRule2Context(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expressionRule2);
					setState(94);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(95); ((ExpressionRule2Context)_localctx).operator = match(T__2);
					setState(96); expressionRule3(0);
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionRule3Context extends ParserRuleContext {
		public Token operator;
		public ExpressionRule3Context expressionRule3() {
			return getRuleContext(ExpressionRule3Context.class,0);
		}
		public ExpressionRule4Context expressionRule4() {
			return getRuleContext(ExpressionRule4Context.class,0);
		}
		public ExpressionRule3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionRule3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterExpressionRule3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitExpressionRule3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitExpressionRule3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionRule3Context expressionRule3() throws RecognitionException {
		return expressionRule3(0);
	}

	private ExpressionRule3Context expressionRule3(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionRule3Context _localctx = new ExpressionRule3Context(_ctx, _parentState);
		ExpressionRule3Context _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_expressionRule3, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(103); expressionRule4(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionRule3Context(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expressionRule3);
					setState(105);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(106); ((ExpressionRule3Context)_localctx).operator = match(T__11);
					setState(107); expressionRule4(0);
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionRule4Context extends ParserRuleContext {
		public Token operator;
		public ExpressionRule5Context expressionRule5() {
			return getRuleContext(ExpressionRule5Context.class,0);
		}
		public ExpressionRule4Context expressionRule4() {
			return getRuleContext(ExpressionRule4Context.class,0);
		}
		public ExpressionRule4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionRule4; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterExpressionRule4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitExpressionRule4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitExpressionRule4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionRule4Context expressionRule4() throws RecognitionException {
		return expressionRule4(0);
	}

	private ExpressionRule4Context expressionRule4(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionRule4Context _localctx = new ExpressionRule4Context(_ctx, _parentState);
		ExpressionRule4Context _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_expressionRule4, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(114); expressionRule5(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionRule4Context(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expressionRule4);
					setState(116);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(117);
					((ExpressionRule4Context)_localctx).operator = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==T__1 || _la==T__0) ) {
						((ExpressionRule4Context)_localctx).operator = (Token)_errHandler.recoverInline(this);
					}
					consume();
					setState(118); expressionRule5(0);
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionRule5Context extends ParserRuleContext {
		public Token operator;
		public ExpressionRule5Context expressionRule5() {
			return getRuleContext(ExpressionRule5Context.class,0);
		}
		public ExpressionRule6Context expressionRule6() {
			return getRuleContext(ExpressionRule6Context.class,0);
		}
		public ExpressionRule5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionRule5; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterExpressionRule5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitExpressionRule5(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitExpressionRule5(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionRule5Context expressionRule5() throws RecognitionException {
		return expressionRule5(0);
	}

	private ExpressionRule5Context expressionRule5(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionRule5Context _localctx = new ExpressionRule5Context(_ctx, _parentState);
		ExpressionRule5Context _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_expressionRule5, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(125); expressionRule6();
			}
			_ctx.stop = _input.LT(-1);
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionRule5Context(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expressionRule5);
					setState(127);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(128);
					((ExpressionRule5Context)_localctx).operator = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==T__26 || _la==T__16) ) {
						((ExpressionRule5Context)_localctx).operator = (Token)_errHandler.recoverInline(this);
					}
					consume();
					setState(129); expressionRule6();
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionRule6Context extends ParserRuleContext {
		public ExpressionRuleContext expressionRule() {
			return getRuleContext(ExpressionRuleContext.class,0);
		}
		public TerminalNode NUMERICVALUE() { return getToken(MFPLParser.NUMERICVALUE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MFPLParser.IDENTIFIER, 0); }
		public ExpressionRule6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionRule6; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterExpressionRule6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitExpressionRule6(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitExpressionRule6(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionRule6Context expressionRule6() throws RecognitionException {
		ExpressionRule6Context _localctx = new ExpressionRule6Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_expressionRule6);
		int _la;
		try {
			setState(140);
			switch (_input.LA(1)) {
			case T__20:
				enterOuterAlt(_localctx, 1);
				{
				setState(135); match(T__20);
				setState(136); expressionRule(0);
				setState(137); match(T__3);
				}
				break;
			case IDENTIFIER:
			case NUMERICVALUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				_la = _input.LA(1);
				if ( !(_la==IDENTIFIER || _la==NUMERICVALUE) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalStructRuleContext extends ParserRuleContext {
		public IfRuleContext ifRule() {
			return getRuleContext(IfRuleContext.class,0);
		}
		public ConditionalStructRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalStructRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).enterConditionalStructRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MFPLListener ) ((MFPLListener)listener).exitConditionalStructRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MFPLVisitor ) return ((MFPLVisitor<? extends T>)visitor).visitConditionalStructRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalStructRuleContext conditionalStructRule() throws RecognitionException {
